Populated styles.css with basic classes and IDs. Built boilerplate for index.html portfolio section. Added img folder and files.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
-<p>RON YONKER</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Ron Yonker | Aspiring Full Stack Developer</title>
+    <link rel="stylesheet" href="normalize.css">
+    <link href='https://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400,400italic,700,700italic,800' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <header>
+      <a href="index.html" id="logo">
+        <h1>Ron Yonker</h1>
+        <h2>Full Stack Developer</h2>
+      </a>
+      <nav>
+        <ul>
+          <li><a href="index.html" class="selected">Portfolio</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div id="wrapper">
+      <section>
+        <ul id="gallery">
+          <li>
+            <a href="img/django.jpg">
+              <img src="img/django.jpg" alt="">
+              <p>Projects leveraging Python and the Django web framework.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/MS-ASP-NET.jpg">
+              <img src="img/MS-ASP-NET.jpg" alt="">
+              <p>Projects leveraging C# and ASP.NET CORE web framework.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/nodejs.png">
+              <img src="img/nodejs.png" alt="">
+              <p>Projects leveraging Node.JS.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/reactjs.png">
+              <img src="img/reactjs.png" alt="">
+              <p>Projects leveraging React.JS.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/c-sharp.png">
+              <img src="img/c-sharp.png" alt="">
+              <p>Projects leveraing simple C# .NET.</p>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <footer>
+        <a href="http://twitter.com/sd_zekka"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+        <a href="http://facebook.com/ron.yonker.5"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+        <p>&copy; 2017 Ron Yonker.</p>
+      </footer>
+    </div>
+  </body>
+</html>
