--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Ron Yonker | Aspiring Full Stack Developer</title>
+    <title>Ron Yonker | Junior Full Stack Developer</title>
     <link rel="stylesheet" href="normalize.css">
     <link href='https://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400,400italic,700,700italic,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles.css">
@@ -11,7 +11,7 @@
     <header>
       <a href="index.html" id="logo">
         <h1>Ron Yonker</h1>
-        <h2>Full Stack Developer</h2>
+        <h2>Junior Full Stack Developer</h2>
       </a>
       <nav>
         <ul>
