--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Ron Yonker | Junior Full Stack Developer</title>
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="normalize.css">
     <link href='https://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400,400italic,700,700italic,800' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
