Added more images. Fixed image source paths. Changed about and contact pages.

--- a/about.html
+++ b/about.html
@@ -22,15 +22,31 @@
       </nav>
     </header>
     <div id="wrapper">
-      <section>
-        <img src="img/RonY.jpg" alt="Photograph of Ron Yonker" class="profile-photo">
-        <h3>About</h3>
-        <p>This is where the "About" blurb goes.</p>
-        <p>If you'd like to follow me on Twitter, my user name is <a href="http://twitter.com/sd_zekka">@SD_ZEKKA</a></p>
-      </section>
+      <main>
+        <section>
+          <img src="images/RonY.jpg" alt="Photograph of Ron Yonker" class="profile-photo">
+          <article>
+            <h3>About</h3>
+            <p>I'm currently enrolled in LaunchCode's LC101 class in St. Louis, working on Portfolio projects.</p>
+            <p>My goal is to start an Apprenticeship through LaunchCode.</p>
+          </article>
+          <article>
+            <h3>Core Skills</h3>
+              <ul class="contact-info">
+                <li>Python for applications and scripting</li>
+                <li>Django Web Framework and REST API</li>
+                <li>Tornado, Pyramid, and Flask web frameworks</li>
+                <li>EcmaScript 6 compliant JavaScript</li>
+                <li>Basic use of Angular (2).js, React.js, Node.js and Express.js</li>
+                <li>C#.NET, ASP.NET Core Web Framework</li>
+              </ul>
+          </article>
+          <p>If you'd like to follow me on Twitter, my user name is <a href="http://twitter.com/sd_zekka">@SD_ZEKKA</a></p>
+        </section>
+      </main>
       <footer>
-        <a href="http://twitter.com/sd_zekka"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
-        <a href="http://facebook.com/ron.yonker.5"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+        <a href="http://twitter.com/sd_zekka"><img src="images/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+        <a href="http://facebook.com/ron.yonker.5"><img src="images/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
         <p>&copy; 2017 Ron Yonker.</p>
       </footer>
     </div>
