--- a/contact.html
+++ b/contact.html
@@ -24,9 +24,9 @@
     <div id="wrapper">
       <section>
         <h3>General Information</h3>
-        <p>I'm current enrolled in LaunchCode's LC101 class in St. Louis. I am currently working on Portfolio projects.</p>
-        <p>I will be seeking an Apprenticeship through LaunchCode, or full-time employment using Python and/or full-stack JavaScript from May 2017 forward.</p>
-        <p>Email is the best way to reach me.</p>
+        <p>Currently employed as a Systems Engineer in a NOC</p>
+        <p>Seeking full-time employment as a Junior Developer</p>
+        <p>Email is the best way to reach me</p>
       </section>
       <section>
         <h3>Contact Details</h3>
@@ -37,8 +37,8 @@
         </ul>
       </section>
       <footer>
-        <a href="http://twitter.com/sd_zekka"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
-        <a href="http://facebook.com/ron.yonker.5"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+        <a href="http://twitter.com/sd_zekka"><img src="images/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+        <a href="http://facebook.com/ron.yonker.5"><img src="images/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
         <p>&copy; 2017 Ron Yonker.</p>
       </footer>
     </div>
