--- a/index.html
+++ b/index.html
@@ -25,40 +25,40 @@
       <section>
         <ul id="gallery">
           <li>
-            <a href="img/django.jpg">
-              <img src="img/django.jpg" alt="">
+            <a href="images/django.jpg">
+              <img src="images/django.jpg" alt="">
               <p>Projects leveraging Python and the Django web framework.</p>
             </a>
           </li>
           <li>
-            <a href="img/MS-ASP-NET.jpg">
-              <img src="img/MS-ASP-NET.jpg" alt="">
+            <a href="images/MS-ASP-NET.jpg">
+              <img src="images/MS-ASP-NET.jpg" alt="">
               <p>Projects leveraging C# and ASP.NET CORE web framework.</p>
             </a>
           </li>
           <li>
-            <a href="img/nodejs.png">
-              <img src="img/nodejs.png" alt="">
+            <a href="images/nodejs.png">
+              <img src="images/nodejs.png" alt="">
               <p>Projects leveraging Node.JS.</p>
             </a>
           </li>
           <li>
-            <a href="img/reactjs.png">
-              <img src="img/reactjs.png" alt="">
+            <a href="images/reactjs.png">
+              <img src="images/reactjs.png" alt="">
               <p>Projects leveraging React.JS.</p>
             </a>
           </li>
           <li>
-            <a href="img/c-sharp.png">
-              <img src="img/c-sharp.png" alt="">
+            <a href="images/c-sharp.png">
+              <img src="images/c-sharp.png" alt="">
               <p>Projects leveraing simple C# .NET.</p>
             </a>
           </li>
         </ul>
       </section>
       <footer>
-        <a href="http://twitter.com/sd_zekka"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
-        <a href="http://facebook.com/ron.yonker.5"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+        <a href="http://twitter.com/sd_zekka"><img src="images/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+        <a href="http://facebook.com/ron.yonker.5"><img src="images/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
         <p>&copy; 2017 Ron Yonker.</p>
       </footer>
     </div>
